--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -6,49 +6,57 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
             height: 100vh;
         }
 
-        /* Mapa de fundo ocupando toda a tela, inclusive o título */
-        .map-container {
+        /* Espaço em branco para o título */
+        .header {
             width: 100%;
-            height: 100vh; /* A imagem de fundo ocupa toda a tela */
-            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
-            background-repeat: repeat; /* Repetir a imagem em ambas direções */
-            background-size: 200%; /* Aumenta o tamanho da imagem de fundo */
-            position: relative;
-            z-index: 1; /* Certifica que o fundo fique atrás de outros elementos */
+            height: 15%; /* Espaço reservado para o título */
+            position: absolute; /* O título ficará sobre a imagem de fundo */
+            z-index: 3; /* Certificar que o título fique acima de tudo */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        /* Título sobre a imagem de fundo */
         .title {
             font-size: 36px;
             font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
-            color: #fff; /* Cor branca para o texto do título */
-            text-align: center;
-            position: absolute;
-            top: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 3;
-            background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente para o título */
+            color: #333;
+            margin: 0;
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo semi-transparente para destacar o título */
             padding: 10px 20px;
             border-radius: 10px;
         }
 
+        /* Mapa de fundo cobrindo toda a tela, incluindo a área do título */
+        .map-container {
+            width: 100%;
+            height: 100vh; /* O fundo cobre toda a tela, inclusive o espaço do título */
+            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
+            background-repeat: repeat; /* Repetir a imagem em ambas direções */
+            background-size: 200%; /* Ajusta o tamanho da imagem de fundo */
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1; /* O fundo está na camada inferior */
+        }
+
         /* Overlay para atividades e bonequinho */
         .overlay-container {
-            position: relative; /* Garantir que todos os elementos dentro sejam relativos a este contêiner */
+            position: relative;
             width: 100%;
-            height: 85%; /* Ajusta a altura conforme necessário */
-            z-index: 2;
+            height: 100%; /* Ocupar toda a área disponível */
+            z-index: 2; /* Círculos e bonequinho estão acima do fundo */
         }
 
         .phase {
-            position: absolute; /* Posicionar os círculos em relação à overlay-container */
+            position: absolute;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -58,7 +66,6 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
-            z-index: 3; /* Acima do fundo */
         }
 
         .phase img {
@@ -141,10 +148,12 @@
     </style>
 </head>
 <body>
-    <!-- Título sobre a imagem de fundo -->
-    <div class="title">Hannah English Course</div>
+    <!-- Espaço em branco com o título -->
+    <div class="header">
+        <h1 class="title">Hannah English Course</h1>
+    </div>
 
-    <!-- Mapa de fundo -->
+    <!-- Mapa de fundo cobrindo toda a tela -->
     <div class="map-container"></div>
 
     <!-- Overlay para atividades e bonequinho -->
@@ -237,7 +246,7 @@
             character.appendChild(characterImg);
 
             const firstPhase = activities[0];
-            character.style.top = `calc(${firstPhase.top} - 50px)`; /* Posição acima da primeira fase */
+            character.style.top = firstPhase.top;
             character.style.left = firstPhase.left;
 
             document.getElementById('mapContainer').appendChild(character);
@@ -250,8 +259,8 @@
             const character = document.getElementById('gameCharacter');
             const targetPhase = activities[phaseIndex];
 
-            // Mover o bonequinho para a nova posição acima ou abaixo do círculo
-            character.style.top = `calc(${targetPhase.top} - 50px)`; // Bonequinho ficará acima do círculo
+            // Mover o bonequinho para a nova posição
+            character.style.top = targetPhase.top;
             character.style.left = targetPhase.left;
 
             // Abrir o link da atividade após o movimento (tempo calculado com base no CSS transition de 1s)
