--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -8,12 +8,11 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
             height: 100vh;
+            overflow-y: scroll; /* Permitir scroll vertical */
         }
 
-        /* Espaço em branco para o título */
+        /* Espaço para o título */
         .header {
             width: 100%;
             height: 15%; /* Espaço reservado para o título */
@@ -37,7 +36,7 @@
         /* Mapa de fundo cobrindo toda a tela, incluindo a área do título */
         .map-container {
             width: 100%;
-            height: 100vh; /* O fundo cobre toda a tela, inclusive o espaço do título */
+            height: 200vh; /* Aumenta a altura para permitir scroll vertical */
             background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
             background-repeat: repeat; /* Repetir a imagem em ambas direções */
             background-size: 200%; /* Ajusta o tamanho da imagem de fundo */
@@ -51,7 +50,7 @@
         .overlay-container {
             position: relative;
             width: 100%;
-            height: 100%; /* Ocupar toda a área disponível */
+            height: 200vh; /* Ocupar toda a área disponível */
             z-index: 2; /* Círculos e bonequinho estão acima do fundo */
         }
 
@@ -62,7 +61,7 @@
             align-items: center;
             background-color: rgba(255, 255, 255, 0.8); /* Fundo transparente */
             border-radius: 50%;
-            padding: 5px;
+            padding: 10px; /* Círculos maiores */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
@@ -116,25 +115,25 @@
         /* Ajustes para telas pequenas (celulares na vertical) */
         @media (max-width: 599px) {
             .phase {
-                width: 140px; /* Dobrar o tamanho dos círculos */
-                height: 140px;
+                width: 200px; /* Aumentar o tamanho dos círculos no celular */
+                height: 200px;
             }
 
             .character {
-                width: 120px; /* Bonequinho maior */
-                height: 120px;
+                width: 150px; /* Bonequinho maior */
+                height: 150px;
             }
         }
 
-        /* Ajustes de responsividade para os círculos e bonequinho */
+        /* Ajustes de responsividade para os círculos e bonequinho em telas maiores */
         @media (min-width: 600px) {
             .phase {
-                width: 100px;
-                height: 100px;
+                width: 150px;
+                height: 150px;
             }
 
             .character {
-                width: 150px; /* Aumenta o tamanho do bonequinho */
+                width: 150px; /* Tamanho do bonequinho */
                 height: 150px;
             }
         }
@@ -143,7 +142,6 @@
         html, body {
             width: 100%;
             height: 100%;
-            overflow: hidden; /* Elimina rolagens */
         }
     </style>
 </head>
@@ -168,7 +166,7 @@
             { id: 3, name: "Activity 3", top: '50%', left: '45%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
             { id: 4, name: "Activity 4", top: '70%', left: '60%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
             { id: 5, name: "Activity 5", top: '85%', left: '75%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
-            { id: 6, name: "Activity 6", top: '65%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
+            { id: 6, name: "Activity 6", top: '120%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
         // Função para gerar as fases e a linha curva
