--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -6,52 +6,50 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
             height: 100vh;
-            overflow-y: scroll; /* Permitir scroll vertical */
         }
 
-        /* Espaço para o título */
+        /* Espaço em branco para o título */
         .header {
             width: 100%;
-            height: 15%; /* Espaço reservado para o título */
-            position: absolute; /* O título ficará sobre a imagem de fundo */
-            z-index: 3; /* Certificar que o título fique acima de tudo */
+            height: 15%;
+            background-color: white;
             display: flex;
             justify-content: center;
             align-items: center;
+            z-index: 3;
         }
 
         .title {
             font-size: 36px;
-            font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
+            font-family: "Times New Roman", Times, serif;
             color: #333;
             margin: 0;
-            background-color: rgba(255, 255, 255, 0.8); /* Fundo semi-transparente para destacar o título */
-            padding: 10px 20px;
-            border-radius: 10px;
         }
 
-        /* Mapa de fundo cobrindo toda a tela, incluindo a área do título */
+        /* Mapa de fundo */
         .map-container {
             width: 100%;
-            height: 200vh; /* Aumenta a altura para permitir scroll vertical */
-            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
-            background-repeat: repeat; /* Repetir a imagem em ambas direções */
-            background-size: 200%; /* Ajusta o tamanho da imagem de fundo */
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 1; /* O fundo está na camada inferior */
+            height: 85%;
+            background-image: url('../../imagens/map_background.png');
+            background-repeat: repeat;
+            background-size: 200%;
+            position: relative;
+            z-index: 1;
         }
 
         /* Overlay para atividades e bonequinho */
         .overlay-container {
-            position: relative;
+            position: absolute;
+            top: 15%;
             width: 100%;
-            height: 200vh; /* Ocupar toda a área disponível */
-            z-index: 2; /* Círculos e bonequinho estão acima do fundo */
+            height: 85%;
+            z-index: 2;
         }
 
         .phase {
@@ -59,23 +57,23 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(255, 255, 255, 0.8); /* Fundo transparente */
+            background-color: rgba(255, 255, 255, 0.8);
             border-radius: 50%;
-            padding: 10px; /* Círculos maiores */
+            padding: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
         }
 
         .phase img {
-            width: 100%; /* O tamanho da imagem será ajustado pelo contêiner da fase */
+            width: 100%;
             height: 100%;
             border-radius: 50%;
         }
 
         .phase:hover {
-            transform: scale(1.5); /* Ampliação maior no hover */
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra mais forte ao hover */
+            transform: scale(1.5);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         }
 
         .locked img {
@@ -83,80 +81,72 @@
         }
 
         .locked::after {
-            content: url('../../imagens/lock_icon_resized.png'); /* Ícone de cadeado */
+            content: url('../../imagens/lock_icon_resized.png');
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 25px;
             height: 25px;
-            z-index: 3;
+            z-index: 2;
         }
 
         .character {
             position: absolute;
-            transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
-            z-index: 3; /* Garante que o bonequinho fique acima do fundo */
+            transition: top 1s, left 1s;
         }
 
         .character img {
-            width: 150px; /* Aumenta o tamanho do bonequinho */
-            height: 150px;
+            width: 100%;
+            height: 100%;
         }
 
-        /* Linha curva mais grossa e pontilhada */
+        /* Linha curva */
         svg path {
             fill: none;
             stroke: red;
-            stroke-width: 8; /* Linha mais grossa */
-            stroke-dasharray: 15; /* Linha pontilhada */
+            stroke-width: 8;
+            stroke-dasharray: 15;
         }
 
-        /* Ajustes para telas pequenas (celulares na vertical) */
+        /* Responsividade */
         @media (max-width: 599px) {
             .phase {
-                width: 200px; /* Aumentar o tamanho dos círculos no celular */
-                height: 200px;
+                width: 140px;
+                height: 140px;
             }
 
             .character {
-                width: 150px; /* Bonequinho maior */
-                height: 150px;
+                width: 140px; /* Bonequinho maior */
+                height: 140px;
             }
         }
 
-        /* Ajustes de responsividade para os círculos e bonequinho em telas maiores */
         @media (min-width: 600px) {
             .phase {
-                width: 150px;
-                height: 150px;
+                width: 100px;
+                height: 100px;
             }
 
             .character {
-                width: 150px; /* Tamanho do bonequinho */
-                height: 150px;
+                width: 120px;
+                height: 120px;
             }
-        }
-
-        /* Para garantir que o fundo preencha toda a tela e elimine as áreas brancas */
-        html, body {
-            width: 100%;
-            height: 100%;
         }
     </style>
 </head>
 <body>
-    <!-- Espaço em branco com o título -->
+    <!-- Título -->
     <div class="header">
         <h1 class="title">Hannah English Course</h1>
     </div>
 
-    <!-- Mapa de fundo cobrindo toda a tela -->
+    <!-- Mapa de fundo -->
     <div class="map-container"></div>
 
     <!-- Overlay para atividades e bonequinho -->
     <div class="overlay-container" id="mapContainer">
-        <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
+        <svg width="100%" height="100%" id="lineContainer"></svg>
     </div>
 
     <script>
@@ -166,16 +156,15 @@
             { id: 3, name: "Activity 3", top: '50%', left: '45%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
             { id: 4, name: "Activity 4", top: '70%', left: '60%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
             { id: 5, name: "Activity 5", top: '85%', left: '75%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
-            { id: 6, name: "Activity 6", top: '120%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
+            { id: 6, name: "Activity 6", top: '65%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
-        // Função para gerar as fases e a linha curva
         function generatePhases() {
             const mapContainer = document.getElementById('mapContainer');
             const lineContainer = document.getElementById('lineContainer');
 
-            lineContainer.innerHTML = ''; // Limpar qualquer linha anterior ao redesenhar
-            let pathD = ''; // Caminho para o atributo "d" do SVG
+            lineContainer.innerHTML = '';
+            let pathD = '';
 
             activities.forEach((activity, index) => {
                 const phaseDiv = document.createElement('div');
@@ -210,7 +199,7 @@
                 const y = (topValue / 100) * mapContainer.clientHeight;
 
                 if (index === 0) {
-                    pathD += `M ${x},${y} `; // "M" para o primeiro ponto
+                    pathD += `M ${x},${y} `;
                 } else {
                     const prevActivity = activities[index - 1];
                     const prevTopValue = parseFloat(prevActivity.top);
@@ -218,13 +207,11 @@
                     const prevX = (prevLeftValue / 100) * mapContainer.clientWidth;
                     const prevY = (prevTopValue / 100) * mapContainer.clientHeight;
 
-                    // Bézier curva entre os pontos
-                    const controlX = (prevX + x) / 2; // Ponto de controle no meio da linha
+                    const controlX = (prevX + x) / 2;
                     pathD += `C ${controlX},${prevY} ${controlX},${y} ${x},${y} `;
                 }
             });
 
-            // Adiciona o caminho ao SVG
             const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
             path.setAttribute("d", pathD);
             lineContainer.appendChild(path);
@@ -233,7 +220,6 @@
             addCharacter();
         }
 
-        // Função para adicionar o bonequinho no mapa
         function addCharacter() {
             const character = document.createElement('div');
             character.classList.add('character');
@@ -244,31 +230,26 @@
             character.appendChild(characterImg);
 
             const firstPhase = activities[0];
-            character.style.top = adjustPosition(firstPhase.top, -50);
-            character.style.left = firstPhase.left;
+            character.style.top = `calc(${firstPhase.top} - 10px)`; // Ajusta para não ficar sobre o círculo
+            character.style.left = `calc(${firstPhase.left} - 10px)`;
 
             document.getElementById('mapContainer').appendChild(character);
         }
 
-        // Função para mover o bonequinho e abrir o link após o movimento
         function moveCharacterToPhase(phaseIndex, link) {
             if (phaseIndex >= activities.length) return;
 
             const character = document.getElementById('gameCharacter');
             const targetPhase = activities[phaseIndex];
 
-            // Mover o bonequinho para uma nova posição tangente ao círculo
-            const topOffset = -50; // Ajuste para parar próximo ao círculo sem sobrepor
-            character.style.top = adjustPosition(targetPhase.top, topOffset);
-            character.style.left = targetPhase.left;
+            character.style.top = `calc(${targetPhase.top} - 10px)`; // Ajusta para não ficar sobre o círculo
+            character.style.left = `calc(${targetPhase.left} - 10px)`;
 
-            // Abrir o link da atividade após o movimento (tempo calculado com base no CSS transition de 1s)
             setTimeout(() => {
                 window.location.href = link;
-            }, 1000); // 1000ms = 1 segundo (mesmo tempo da animação)
+            }, 1000);
         }
 
-        // Função para desbloquear a próxima fase
         function unlockNextPhase(phaseIndex) {
             const nextPhaseIndex = phaseIndex + 1;
             if (nextPhaseIndex < activities.length) {
@@ -278,16 +259,7 @@
             }
         }
 
-        // Função para ajustar a posição do bonequinho
-        function adjustPosition(position, offset) {
-            const numericPosition = parseFloat(position);
-            return `${numericPosition + offset}%`;
-        }
-
-        // Chama a função ao carregar a página
         window.onload = generatePhases;
-
-        // Redesenhar linhas ao redimensionar a janela
         window.onresize = function() {
             generatePhases();
         };
