--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -17,28 +17,28 @@
         /* Espaço em branco para o título */
         .header {
             width: 100%;
-            height: 15%;
-            background-color: white;
+            height: 15%; /* Espaço reservado para o título */
+            background-color: white; /* Espaço branco */
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 3;
+            z-index: 3; /* Certificar que o título fique acima de tudo */
         }
 
         .title {
             font-size: 36px;
-            font-family: "Times New Roman", Times, serif;
+            font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
             color: #333;
             margin: 0;
         }
 
-        /* Mapa de fundo */
+        /* Mapa de fundo repetido em ambas direções */
         .map-container {
             width: 100%;
-            height: 85%;
-            background-image: url('../../imagens/map_background.png');
-            background-repeat: repeat;
-            background-size: 200%;
+            height: 85%; /* Ajusta a altura conforme necessário */
+            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
+            background-repeat: repeat; /* Repetir a imagem em ambas direções */
+            background-size: 250px auto; /* Ajusta a largura e altura da imagem de fundo */
             position: relative;
             z-index: 1;
         }
@@ -46,10 +46,10 @@
         /* Overlay para atividades e bonequinho */
         .overlay-container {
             position: absolute;
-            top: 15%;
+            top: 15%; /* Mesma altura que o título */
             width: 100%;
-            height: 85%;
-            z-index: 2;
+            height: 85%; /* Mesma altura da imagem de fundo */
+            z-index: 2; /* Os elementos estão acima do mapa */
         }
 
         .phase {
@@ -57,7 +57,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo transparente */
             border-radius: 50%;
             padding: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -66,14 +66,14 @@
         }
 
         .phase img {
-            width: 100%;
+            width: 100%; /* O tamanho da imagem será ajustado pelo contêiner da fase */
             height: 100%;
             border-radius: 50%;
         }
 
         .phase:hover {
-            transform: scale(1.5);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+            transform: scale(1.5); /* Ampliação maior no hover */
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra mais forte ao hover */
         }
 
         .locked img {
@@ -81,7 +81,7 @@
         }
 
         .locked::after {
-            content: url('../../imagens/lock_icon_resized.png');
+            content: url('../../imagens/lock_icon_resized.png'); /* Ícone de cadeado */
             position: absolute;
             top: 50%;
             left: 50%;
@@ -93,7 +93,7 @@
 
         .character {
             position: absolute;
-            transition: top 1s, left 1s;
+            transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
         }
 
         .character img {
@@ -101,27 +101,28 @@
             height: 100%;
         }
 
-        /* Linha curva */
+        /* Linha curva mais grossa e pontilhada */
         svg path {
             fill: none;
             stroke: red;
-            stroke-width: 8;
-            stroke-dasharray: 15;
+            stroke-width: 8; /* Linha mais grossa */
+            stroke-dasharray: 15; /* Linha pontilhada */
         }
 
-        /* Responsividade */
+        /* Ajustes para telas pequenas (celulares na vertical) */
         @media (max-width: 599px) {
             .phase {
-                width: 140px;
-                height: 140px;
+                width: 200px; /* Dobrar o tamanho dos círculos */
+                height: 200px;
             }
 
             .character {
-                width: 140px; /* Bonequinho maior */
-                height: 140px;
+                width: 180px; /* Bonequinho maior */
+                height: 180px;
             }
         }
 
+        /* Ajustes de responsividade para os círculos e bonequinho */
         @media (min-width: 600px) {
             .phase {
                 width: 100px;
@@ -129,14 +130,21 @@
             }
 
             .character {
-                width: 120px;
-                height: 120px;
+                width: 100px; /* Aumenta o tamanho do bonequinho em todas as situações */
+                height: 100px;
             }
+        }
+
+        /* Para garantir que o fundo preencha toda a tela e elimine as áreas brancas */
+        html, body {
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* Elimina rolagens */
         }
     </style>
 </head>
 <body>
-    <!-- Título -->
+    <!-- Espaço em branco com o título -->
     <div class="header">
         <h1 class="title">Hannah English Course</h1>
     </div>
@@ -146,7 +154,7 @@
 
     <!-- Overlay para atividades e bonequinho -->
     <div class="overlay-container" id="mapContainer">
-        <svg width="100%" height="100%" id="lineContainer"></svg>
+        <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
     </div>
 
     <script>
@@ -159,12 +167,13 @@
             { id: 6, name: "Activity 6", top: '65%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
+        // Função para gerar as fases e a linha curva
         function generatePhases() {
             const mapContainer = document.getElementById('mapContainer');
             const lineContainer = document.getElementById('lineContainer');
 
-            lineContainer.innerHTML = '';
-            let pathD = '';
+            lineContainer.innerHTML = ''; // Limpar qualquer linha anterior ao redesenhar
+            let pathD = ''; // Caminho para o atributo "d" do SVG
 
             activities.forEach((activity, index) => {
                 const phaseDiv = document.createElement('div');
@@ -199,7 +208,7 @@
                 const y = (topValue / 100) * mapContainer.clientHeight;
 
                 if (index === 0) {
-                    pathD += `M ${x},${y} `;
+                    pathD += `M ${x},${y} `; // "M" para o primeiro ponto
                 } else {
                     const prevActivity = activities[index - 1];
                     const prevTopValue = parseFloat(prevActivity.top);
@@ -207,11 +216,13 @@
                     const prevX = (prevLeftValue / 100) * mapContainer.clientWidth;
                     const prevY = (prevTopValue / 100) * mapContainer.clientHeight;
 
-                    const controlX = (prevX + x) / 2;
+                    // Bézier curva entre os pontos
+                    const controlX = (prevX + x) / 2; // Ponto de controle no meio da linha
                     pathD += `C ${controlX},${prevY} ${controlX},${y} ${x},${y} `;
                 }
             });
 
+            // Adiciona o caminho ao SVG
             const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
             path.setAttribute("d", pathD);
             lineContainer.appendChild(path);
@@ -220,6 +231,7 @@
             addCharacter();
         }
 
+        // Função para adicionar o bonequinho no mapa
         function addCharacter() {
             const character = document.createElement('div');
             character.classList.add('character');
@@ -230,26 +242,30 @@
             character.appendChild(characterImg);
 
             const firstPhase = activities[0];
-            character.style.top = `calc(${firstPhase.top} - 10px)`; // Ajusta para não ficar sobre o círculo
-            character.style.left = `calc(${firstPhase.left} - 10px)`;
+            character.style.top = firstPhase.top;
+            character.style.left = firstPhase.left;
 
             document.getElementById('mapContainer').appendChild(character);
         }
 
+        // Função para mover o bonequinho e abrir o link após o movimento
         function moveCharacterToPhase(phaseIndex, link) {
             if (phaseIndex >= activities.length) return;
 
             const character = document.getElementById('gameCharacter');
             const targetPhase = activities[phaseIndex];
 
-            character.style.top = `calc(${targetPhase.top} - 10px)`; // Ajusta para não ficar sobre o círculo
-            character.style.left = `calc(${targetPhase.left} - 10px)`;
+            // Mover o bonequinho para a nova posição
+            character.style.top = `calc(${targetPhase.top} - 10px)`; // Ajustar a posição para não sobrepor o círculo
+            character.style.left = targetPhase.left;
 
+            // Abrir o link da atividade após o movimento (tempo calculado com base no CSS transition de 1s)
             setTimeout(() => {
                 window.location.href = link;
-            }, 1000);
+            }, 1000); // 1000ms = 1 segundo (mesmo tempo da animação)
         }
 
+        // Função para desbloquear a próxima fase
         function unlockNextPhase(phaseIndex) {
             const nextPhaseIndex = phaseIndex + 1;
             if (nextPhaseIndex < activities.length) {
@@ -259,7 +275,10 @@
             }
         }
 
+        // Chama a função ao carregar a página
         window.onload = generatePhases;
+
+        // Redesenhar linhas ao redimensionar a janela
         window.onresize = function() {
             generatePhases();
         };
