--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -255,8 +255,8 @@
             const character = document.getElementById('gameCharacter');
             const targetPhase = activities[phaseIndex];
 
-            // Mover o bonequinho para a nova posição
-            character.style.top = `calc(${targetPhase.top} - 10px)`; // Ajustar a posição para não sobrepor o círculo
+            // Mover o bonequinho para a nova posição, ajustando para não sobrepor o círculo
+            character.style.top = `calc(${targetPhase.top} - 30px)`; // Mover 30px acima do círculo
             character.style.left = targetPhase.left;
 
             // Abrir o link da atividade após o movimento (tempo calculado com base no CSS transition de 1s)
