--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -6,7 +6,6 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
             margin: 0;
             padding: 0;
             display: flex;
@@ -14,50 +13,51 @@
             height: 100vh;
         }
 
-        /* Espaço em branco para o título */
+        /* Cabeçalho com o título */
         .header {
             width: 100%;
-            height: 15%; /* Espaço reservado para o título */
-            background-color: white; /* Espaço branco */
+            height: 15%; /* Reservar 15% da altura para o título */
+            background-color: white; /* Fundo branco para o título */
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 3; /* Certificar que o título fique acima de tudo */
+            z-index: 3; /* Certificar que o título fique sobre os outros elementos */
         }
 
         .title {
             font-size: 36px;
-            font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
+            font-family: "Times New Roman", Times, serif;
             color: #333;
             margin: 0;
         }
 
-        /* Mapa de fundo repetido em ambas direções */
+        /* Mapa de fundo com repetição */
         .map-container {
             width: 100%;
-            height: 85%; /* Ajusta a altura conforme necessário */
-            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
-            background-repeat: repeat; /* Repetir a imagem em ambas direções */
-            background-size: 250px auto; /* Ajusta a largura e altura da imagem de fundo */
+            height: 85%; /* Altura restante da tela */
+            background-image: url('../../imagens/map_background.png'); /* Substituir pelo caminho correto */
+            background-repeat: repeat; /* Repetir a imagem em ambas as direções */
+            background-size: 200%; /* Aumentar o tamanho do background para 200% */
             position: relative;
             z-index: 1;
         }
 
-        /* Overlay para atividades e bonequinho */
+        /* Overlay para os círculos e o bonequinho */
         .overlay-container {
             position: absolute;
-            top: 15%; /* Mesma altura que o título */
+            top: 15%; /* Iniciar logo abaixo do título */
             width: 100%;
-            height: 85%; /* Mesma altura da imagem de fundo */
-            z-index: 2; /* Os elementos estão acima do mapa */
+            height: 85%;
+            z-index: 2;
         }
 
+        /* Estilos dos círculos */
         .phase {
             position: absolute;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(255, 255, 255, 0.8); /* Fundo transparente */
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo translúcido */
             border-radius: 50%;
             padding: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -66,14 +66,14 @@
         }
 
         .phase img {
-            width: 100%; /* O tamanho da imagem será ajustado pelo contêiner da fase */
+            width: 100%; /* O tamanho da imagem será ajustado conforme o contêiner */
             height: 100%;
             border-radius: 50%;
         }
 
         .phase:hover {
             transform: scale(1.5); /* Ampliação maior no hover */
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra mais forte ao hover */
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
         }
 
         .locked img {
@@ -81,7 +81,7 @@
         }
 
         .locked::after {
-            content: url('../../imagens/lock_icon_resized.png'); /* Ícone de cadeado */
+            content: url('../../imagens/lock_icon_resized.png');
             position: absolute;
             top: 50%;
             left: 50%;
@@ -91,9 +91,10 @@
             z-index: 2;
         }
 
+        /* Estilos do bonequinho */
         .character {
             position: absolute;
-            transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
+            transition: top 1s, left 1s;
         }
 
         .character img {
@@ -101,28 +102,19 @@
             height: 100%;
         }
 
-        /* Linha curva mais grossa e pontilhada */
-        svg path {
-            fill: none;
-            stroke: red;
-            stroke-width: 8; /* Linha mais grossa */
-            stroke-dasharray: 15; /* Linha pontilhada */
-        }
-
-        /* Ajustes para telas pequenas (celulares na vertical) */
+        /* Responsividade */
         @media (max-width: 599px) {
             .phase {
-                width: 200px; /* Dobrar o tamanho dos círculos */
-                height: 200px;
+                width: 150px; /* Círculos maiores em telas pequenas */
+                height: 150px;
             }
 
             .character {
-                width: 180px; /* Bonequinho maior */
-                height: 180px;
+                width: 120px; /* Bonequinho maior em telas pequenas */
+                height: 120px;
             }
         }
 
-        /* Ajustes de responsividade para os círculos e bonequinho */
         @media (min-width: 600px) {
             .phase {
                 width: 100px;
@@ -130,21 +122,21 @@
             }
 
             .character {
-                width: 100px; /* Aumenta o tamanho do bonequinho em todas as situações */
+                width: 100px;
                 height: 100px;
             }
         }
 
-        /* Para garantir que o fundo preencha toda a tela e elimine as áreas brancas */
+        /* Garantir que o fundo preencha toda a tela */
         html, body {
             width: 100%;
             height: 100%;
-            overflow: hidden; /* Elimina rolagens */
+            overflow: auto;
         }
     </style>
 </head>
 <body>
-    <!-- Espaço em branco com o título -->
+    <!-- Cabeçalho com o título -->
     <div class="header">
         <h1 class="title">Hannah English Course</h1>
     </div>
@@ -152,7 +144,7 @@
     <!-- Mapa de fundo -->
     <div class="map-container"></div>
 
-    <!-- Overlay para atividades e bonequinho -->
+    <!-- Overlay para os círculos e bonequinho -->
     <div class="overlay-container" id="mapContainer">
         <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
     </div>
@@ -201,7 +193,7 @@
 
                 mapContainer.appendChild(phaseDiv);
 
-                // Adiciona o centro de cada fase ao caminho da linha
+                // Adicionar o centro de cada fase ao caminho da linha
                 const topValue = parseFloat(activity.top);
                 const leftValue = parseFloat(activity.left);
                 const x = (leftValue / 100) * mapContainer.clientWidth;
@@ -222,12 +214,12 @@
                 }
             });
 
-            // Adiciona o caminho ao SVG
+            // Adicionar o caminho ao SVG
             const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
             path.setAttribute("d", pathD);
             lineContainer.appendChild(path);
 
-            // Adiciona o bonequinho
+            // Adicionar o bonequinho
             addCharacter();
         }
 
@@ -255,8 +247,8 @@
             const character = document.getElementById('gameCharacter');
             const targetPhase = activities[phaseIndex];
 
-            // Mover o bonequinho para a nova posição, ajustando para não sobrepor o círculo
-            character.style.top = `calc(${targetPhase.top} - 30px)`; // Mover 30px acima do círculo
+            // Mover o bonequinho para a nova posição
+            character.style.top = targetPhase.top;
             character.style.left = targetPhase.left;
 
             // Abrir o link da atividade após o movimento (tempo calculado com base no CSS transition de 1s)
