--- a/nivelA/unidade4/index.html
+++ b/nivelA/unidade4/index.html
@@ -8,72 +8,74 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
             height: 100vh;
+            overflow-y: scroll; /* Permitir scroll vertical */
         }
 
-        /* Cabeçalho com o título */
+        /* Espaço para o título */
         .header {
             width: 100%;
-            height: 15%; /* Reservar 15% da altura para o título */
-            background-color: white; /* Fundo branco para o título */
+            height: 15%; /* Espaço reservado para o título */
+            position: absolute; /* O título ficará sobre a imagem de fundo */
+            z-index: 3; /* Certificar que o título fique acima de tudo */
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 3; /* Certificar que o título fique sobre os outros elementos */
         }
 
         .title {
             font-size: 36px;
-            font-family: "Times New Roman", Times, serif;
+            font-family: "Times New Roman", Times, serif; /* Alterar para Arial se necessário */
             color: #333;
             margin: 0;
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo semi-transparente para destacar o título */
+            padding: 10px 20px;
+            border-radius: 10px;
         }
 
-        /* Mapa de fundo com repetição */
+        /* Mapa de fundo cobrindo toda a tela, incluindo a área do título */
         .map-container {
             width: 100%;
-            height: 85%; /* Altura restante da tela */
-            background-image: url('../../imagens/map_background.png'); /* Substituir pelo caminho correto */
-            background-repeat: repeat; /* Repetir a imagem em ambas as direções */
-            background-size: 200%; /* Aumentar o tamanho do background para 200% */
-            position: relative;
-            z-index: 1;
-        }
-
-        /* Overlay para os círculos e o bonequinho */
-        .overlay-container {
+            height: 200vh; /* Aumenta a altura para permitir scroll vertical */
+            background-image: url('../../imagens/map_background.png'); /* Substitua pela imagem correta */
+            background-repeat: repeat; /* Repetir a imagem em ambas direções */
+            background-size: 200%; /* Ajusta o tamanho da imagem de fundo */
             position: absolute;
-            top: 15%; /* Iniciar logo abaixo do título */
-            width: 100%;
-            height: 85%;
-            z-index: 2;
+            top: 0;
+            left: 0;
+            z-index: 1; /* O fundo está na camada inferior */
         }
 
-        /* Estilos dos círculos */
+        /* Overlay para atividades e bonequinho */
+        .overlay-container {
+            position: relative;
+            width: 100%;
+            height: 200vh; /* Ocupar toda a área disponível */
+            z-index: 2; /* Círculos e bonequinho estão acima do fundo */
+        }
+
         .phase {
             position: absolute;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgba(255, 255, 255, 0.8); /* Fundo translúcido */
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo transparente */
             border-radius: 50%;
-            padding: 5px;
+            padding: 10px; /* Círculos maiores */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
         }
 
         .phase img {
-            width: 100%; /* O tamanho da imagem será ajustado conforme o contêiner */
+            width: 100%; /* O tamanho da imagem será ajustado pelo contêiner da fase */
             height: 100%;
             border-radius: 50%;
         }
 
         .phase:hover {
             transform: scale(1.5); /* Ampliação maior no hover */
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Sombra mais forte ao hover */
         }
 
         .locked img {
@@ -81,70 +83,78 @@
         }
 
         .locked::after {
-            content: url('../../imagens/lock_icon_resized.png');
+            content: url('../../imagens/lock_icon_resized.png'); /* Ícone de cadeado */
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 25px;
             height: 25px;
-            z-index: 2;
+            z-index: 3;
         }
 
-        /* Estilos do bonequinho */
         .character {
             position: absolute;
-            transition: top 1s, left 1s;
+            transition: top 1s, left 1s; /* Animação suave para o movimento do bonequinho */
+            z-index: 3; /* Garante que o bonequinho fique acima do fundo */
         }
 
         .character img {
-            width: 100%;
-            height: 100%;
+            width: 150px; /* Aumenta o tamanho do bonequinho */
+            height: 150px;
         }
 
-        /* Responsividade */
+        /* Linha curva mais grossa e pontilhada */
+        svg path {
+            fill: none;
+            stroke: red;
+            stroke-width: 8; /* Linha mais grossa */
+            stroke-dasharray: 15; /* Linha pontilhada */
+        }
+
+        /* Ajustes para telas pequenas (celulares na vertical) */
         @media (max-width: 599px) {
             .phase {
-                width: 150px; /* Círculos maiores em telas pequenas */
+                width: 200px; /* Aumentar o tamanho dos círculos no celular */
+                height: 200px;
+            }
+
+            .character {
+                width: 150px; /* Bonequinho maior */
+                height: 150px;
+            }
+        }
+
+        /* Ajustes de responsividade para os círculos e bonequinho em telas maiores */
+        @media (min-width: 600px) {
+            .phase {
+                width: 150px;
                 height: 150px;
             }
 
             .character {
-                width: 120px; /* Bonequinho maior em telas pequenas */
-                height: 120px;
+                width: 150px; /* Tamanho do bonequinho */
+                height: 150px;
             }
         }
 
-        @media (min-width: 600px) {
-            .phase {
-                width: 100px;
-                height: 100px;
-            }
-
-            .character {
-                width: 100px;
-                height: 100px;
-            }
-        }
-
-        /* Garantir que o fundo preencha toda a tela */
+        /* Para garantir que o fundo preencha toda a tela e elimine as áreas brancas */
         html, body {
             width: 100%;
             height: 100%;
-            overflow: auto;
         }
     </style>
 </head>
 <body>
-    <!-- Cabeçalho com o título -->
+    <!-- Espaço em branco com o título -->
     <div class="header">
         <h1 class="title">Hannah English Course</h1>
     </div>
 
-    <!-- Mapa de fundo -->
+    <!-- Mapa de fundo cobrindo toda a tela -->
     <div class="map-container"></div>
 
-    <!-- Overlay para os círculos e bonequinho -->
+    <!-- Overlay para atividades e bonequinho -->
     <div class="overlay-container" id="mapContainer">
         <svg width="100%" height="100%" id="lineContainer"></svg> <!-- Contêiner para a linha curva -->
     </div>
@@ -156,7 +166,7 @@
             { id: 3, name: "Activity 3", top: '50%', left: '45%', locked: true, image: 'botoes/memorygame_button.png', link: '../unidade2/MemoryGame/index.html' },
             { id: 4, name: "Activity 4", top: '70%', left: '60%', locked: true, image: 'botoes/quiz_button.png', link: '../unidade2/QUIZ/index.html' },
             { id: 5, name: "Activity 5", top: '85%', left: '75%', locked: true, image: 'botoes/wordsearch_button.png', link: '../unidade2/WordSearch/index.html' },
-            { id: 6, name: "Activity 6", top: '65%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
+            { id: 6, name: "Activity 6", top: '120%', left: '90%', locked: true, image: 'botoes/grammar_button.png', link: '../unidade2/Grammar/index.html' }
         ];
 
         // Função para gerar as fases e a linha curva
@@ -193,7 +203,7 @@
 
                 mapContainer.appendChild(phaseDiv);
 
-                // Adicionar o centro de cada fase ao caminho da linha
+                // Adiciona o centro de cada fase ao caminho da linha
                 const topValue = parseFloat(activity.top);
                 const leftValue = parseFloat(activity.left);
                 const x = (leftValue / 100) * mapContainer.clientWidth;
@@ -214,12 +224,12 @@
                 }
             });
 
-            // Adicionar o caminho ao SVG
+            // Adiciona o caminho ao SVG
             const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
             path.setAttribute("d", pathD);
             lineContainer.appendChild(path);
 
-            // Adicionar o bonequinho
+            // Adiciona o bonequinho
             addCharacter();
         }
 
